--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -3,8 +3,11 @@
 <title>Mailroom</title>
 </head>
 <body>
-	<h1>Donations</h1>
-	<h2>{% block subtitle %} {% endblock subtitle %}</h2>
-	{% block content %} {% endblock content %}
+    <nav>
+        <a id="donations" href="{{ url_for('all') }}">All Donations</a>
+        <a id="create" href="{{ url_for('create') }}">Create a Donation</a>
+    <h1>Donations</h1>
+    <h2>{% block subtitle %} {% endblock subtitle %}</h2>
+    {% block content %} {% endblock content %}
 </body>
 </html>
